--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"start": "node server.js",
 		"server": "nodemon server.js",
 		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"server-debug": "nodemon --inspect server.js",
+		"dev-debug": "concurrently \"npm run server-debug\" \"npm run client\""
 	},
 	"author": "John Huynh",
 	"license": "MIT",
@@ -16,7 +18,9 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
 		"concurrently": "^3.6.1",
-		"express": "^4.16.3"
+		"express": "^4.16.3",
+		"passport": "^0.4.0",
+
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.3"
