--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
 		"concurrently": "^3.6.1",
+		"cookie-parser": "^1.4.3",
 		"express": "^4.16.3",
-		"passport": "^0.4.0",
-
+		"passport": "^0.4.0"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.3"
